--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-editable-and-draggable-text",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "This component is editable and draggable text",
   "author": "lgdelacruz92",
   "license": "MIT",
@@ -24,7 +24,10 @@
   "peerDependencies": {
     "prop-types": "^15.5.4",
     "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "react-dom": "^15.0.0 || ^16.0.0",
+    "react-autosize-textarea": "^7.0.0",
+    "clsx": "^1.0.4",
+    "@material-ui/core": "^4.6.1"
   },
   "devDependencies": {
     "@svgr/rollup": "^2.4.1",
